Aprendendo os fundamentos do Grid de Bootstrap

--- a/01-containers/container-fluid.html
+++ b/01-containers/container-fluid.html
@@ -6,8 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Base</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+
 </head>
 <body>
-    
+
+    <div class="container-fluid">
+         <h1>Container Fluid</h1>
+         <p>Largura de 100% com 15px de respiro nas laterais.</p>
+    </div>
+
 </body>
 </html>
