--- a/exercicio-grid/exercicio-grid.html
+++ b/exercicio-grid/exercicio-grid.html
@@ -39,14 +39,35 @@
         <!-- Final Header -->
 
        <!-- Início - Ultimas Noticias -->
-       <div class="row noticias">
-           <div class="col noticia">
+            <div class="row noticias align-items-center">
+                <div class="col-12 col-sm-4 noticia">
+                    <h3>Título</h3>
+                    <p>Lorem ipsum harum ipsa placeat tenetur cum odit dolorum veniam cupiditate unde sapiente debitis?</p>
+                </div>
+                <div class="col-12 col-sm-3 noticia">
+                    <h3>Título</h3>
+                    <p>Lorem ipsum harum ipsa placeat tenetur cum odit dolorum veniam cupiditate unde sapiente debitis?</p>
+                </div>
+                <div class="col-12 col-sm-4 noticia">
+                    <h3>Título</h3>
+                    <p>Lorem ipsum harum ipsa placeat tenetur cum odit dolorum veniam cupiditate unde sapiente debitis?</p>
+                </div>
+            </div>
 
-           </div>
-           <div class="col noticia"></div>
-           <div class="col noticia"></div>
-       </div>
+        <!-- Inicio Chamada -->
+
+            <div class="row chamada-louca">
+
+                <div class="col-12 col-sm-10 chamada">
+                    <p>Chamada muito louca</p>
+                </div>
+
+                <div class="col-12 col-sm-2 botao">
+                    <a href="">Saiba Mais</a>
+                </div>
+            </div>
     </div>
+
 
 
 </body>
