--- a/exercicio-grid/exercicio-grid.html
+++ b/exercicio-grid/exercicio-grid.html
@@ -66,6 +66,15 @@
                     <a href="">Saiba Mais</a>
                 </div>
             </div>
+
+        <!-- Inicio do footer -->
+        <footer class="row">
+
+            <div class="col-12 footer">
+                <p>Este é o Footer</p>
+            </div>
+
+        </footer>
     </div>
 
 
