Botoes, carrossel, alerts e Jumbotron

--- a/13-jumbotron/fluid-jumbotron.html
+++ b/13-jumbotron/fluid-jumbotron.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Base</title>
+    <title>Fluid Jumbotron</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
 
-
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container-fluid">
+            <h1 class="display-3">Olá! Bem Vindo</h1>
+            <p class="lead">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus autem dolore velit accusamus, hic perspiciatis.
+            </p>
+        </div>
+    </div>
 
     <!-- jquery -->
     <script src="../node_modules/jquery/jquery.min.js"></script>
