--- a/10-buttoms/states.html
+++ b/10-buttoms/states.html
@@ -29,7 +29,46 @@
             <a href="#"class="btn btn-secondary disabled">Warning</a>
         </div>
 
+        <div class="mt-3">
+            
+            <h3>Checkbox and Radios</h3>
+            <div class="btn-group" data-toggle="buttons">
+                <label class="btn btn-danger active">
+                    <input type="checkbox" checked autocomplete="off"> CheckBox 1
+                </label>
+                <label class="btn btn-danger">
+                    <input type="checkbox" autocomplete="off"> CheckBox 2
+                </label>
+                <label class="btn btn-danger">
+                    <input type="checkbox" autocomplete="off"> CheckBox 3
+                </label>
+            </div>
+
+
+            <div class="btn-group" data-toggle="buttons">
+                <label class="btn btn-info active">
+                    <input type="radio" name="option" id="option1" checked autocomplete="off"> CheckBox 1
+                </label>
+                <label class="btn btn-danger">
+                    <input type="radio" name="option" id="option2" autocomplete="off"> CheckBox 2
+                </label>
+                <label class="btn btn-warning">
+                    <input type="radio" name="option" id="option3" autocomplete="off"> CheckBox 3
+                </label>
+            </div>
+
+        </div>
+
     </div>
+
+    <!-- jquery -->
+    <script src="../node_modules/jquery/jquery.min.js"></script>
+
+    <!-- popper -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     
 </body>
 </html>
