--- a/15-navbar/navbar.html
+++ b/15-navbar/navbar.html
@@ -6,11 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Navbar</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+
+    <style>
+        .bg-custom{
+            background-color: purple;
+        }
+    </style>
 </head>
 <body>
 
     <!-- navbar -->
-    <nav class="navbar navbar-light navbar-expand-md bg-light">
+    <!-- Ao inves da bg-custom, poderia usar as cores do Bootstrap - bg-primary, bg-warning, etc -->
+    <nav class="navbar navbar-dark navbar-expand-md bg-custom">
         <!-- Logo -->
         <a href="#" class="navbar-brand">Logo</a>
         <!-- Logo -->
@@ -22,7 +29,7 @@
         <!-- Button-Toggler -->
 
         <div class="collapse navbar-collapse" id="navbarBar">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a href="#" class="nav-link">Menu 1</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Menu 2</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Menu 3</a></li>
@@ -38,9 +45,17 @@
                     </div>
                 </li>
             </ul>
+            
+            <form class="form-inline">
+                <input type="search" placeholder="Buscar" class="form-control mr-sm-2">
+                <button class="btn btn-outline-info my-2 my-sm-0" type="submit">OK</button>
+            </form>
+        
         </div>
+
+
+
     </nav>
-    <!-- Logo -->
 
 
     <!-- jquery -->
