Tentativa de exercicio

--- a/exercicio-grid/exercicio-grid.html
+++ b/exercicio-grid/exercicio-grid.html
@@ -39,45 +39,41 @@
         <!-- Final Header -->
 
        <!-- Início - Ultimas Noticias -->
-            <div class="row noticias align-items-center">
-                <div class="col-12 col-sm-4 noticia">
-                    <h3>Título</h3>
-                    <p>Lorem ipsum harum ipsa placeat tenetur cum odit dolorum veniam cupiditate unde sapiente debitis?</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="noticia col-md-12">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, eius?</p>
+                    </div>
                 </div>
-                <div class="col-12 col-sm-3 noticia">
-                    <h3>Título</h3>
-                    <p>Lorem ipsum harum ipsa placeat tenetur cum odit dolorum veniam cupiditate unde sapiente debitis?</p>
+                <div class="col-md-4">
+                    <div class="noticia col-md-12">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, eius?</p>
+                    </div>
                 </div>
-                <div class="col-12 col-sm-4 noticia">
-                    <h3>Título</h3>
-                    <p>Lorem ipsum harum ipsa placeat tenetur cum odit dolorum veniam cupiditate unde sapiente debitis?</p>
+                <div class="col-md-4">
+                    <div class="noticia col-md-12">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, eius?</p>
+                    </div>
                 </div>
             </div>
 
         <!-- Inicio Chamada -->
 
-            <div class="row chamada-louca">
-
-                <div class="col-12 col-sm-10 chamada">
-                    <p>Chamada muito louca</p>
-                </div>
-
-                <div class="col-12 col-sm-2 botao">
-                    <a href="">Saiba Mais</a>
-                </div>
+        <div class="row chamada">
+            <div class="col-md-6">
+                <div class="col-md-12">
+                    <p>Chamada</p>
+                </div>     
             </div>
+            <div class="col-md-6">
+                <div class="col-md-12">
+                    <p>Chamada</p>
+                </div>     
+            </div>
+        </div>
 
         <!-- Inicio do footer -->
-        <footer class="row">
-
-            <div class="col-12 footer">
-                <p>Este é o Footer</p>
-            </div>
-
-        </footer>
+    
     </div>
-
-
-
 </body>
 </html>
