--- a/02-grid/vertical-alignment.html
+++ b/02-grid/vertical-alignment.html
@@ -33,7 +33,7 @@
 
     <div class="container">
 
-        <div class="row align-items-end">
+        <div class="row align-items-center">
             <div class="col verde">
                 <h3>Wabba Lub Dubba Duub</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque aspernatur enim voluptatem quibusdam, ipsa laudantium amet quisquam vero atque? Saepe ipsum corporis,
